00-governance/audit-evidence/pipeline-green-v4/raw-repository/04-secure-cloud-foundation/argocd/authorization-policy.yaml
# |---------------------------------------------------------------------------------------|
# |  --> REGENERA ENTERPRISE SYSTEM v4.0                                                  |
# |---------------------------------------------------------------------------------------|
#
# PROJECT:       Regenera Bank
# CEO:           Raphaela Cerveski
# DEVELOPER:     Don Paulo Ricardo
# ID:            2098233287
# COPYRIGHT:     Copyright (c) 2026 Regenera Corporate
#
# LICENSE:       EULA (End-User License Agreement)
# PROTECTION:    PROPRIEDADE INTELECTUAL RESTRITA
#
# WARNING:       TODOS OS DIREITOS RESERVADOS. Proibida a cópia, distribuição,
#                engenharia reversa ou modificação não autorizada.
#
# |---------------------------------------------------------------------------------------|
# |  --> CLASSIFICATION: PROPRIETARY // DEVELOPER MAINTAINED // REQUIRES SENIOR REVIEW          |
# |---------------------------------------------------------------------------------------|

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: limit-ledger-ingress
  namespace: regenera-prod
spec:
  selector:
    matchLabels:
      app: regenera-core
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"]
      to:
        - operation:
            methods: ["GET", "POST"]
            ports: ["3000"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: limit-spanner-access
  namespace: regenera-prod
spec:
  selector:
    matchLabels:
      app: regenera-core
  action: ALLOW
  rules:
    - to:
        - operation:
            hosts: ["spanner.googleapis.com"]
